--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="calls">Calls</string>
     <string name="status">Status</string>
     <string name="camera">Camera</string>
+    <string name="new_chat">New Chat</string>
 </resources>
