added all icons to chat
added all icons to chat

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,8 @@
     <string name="calls">Calls</string>
     <string name="status">Status</string>
     <string name="camera">Camera</string>
+    <string name="communities"> Communities</string>
     <string name="new_chat">New Chat</string>
+    <string name="broadcast_lists">Broadcast Lists</string>
+    <string name="new_group">New Group</string>
 </resources>
