--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="new_chat">New Chat</string>
     <string name="broadcast_lists">Broadcast Lists</string>
     <string name="new_group">New Group</string>
+    <string name="archived">Archived</string>
 </resources>
